feat: Enhance .gitignore with common patterns

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
 venv/
-pycache__/
+.venv/
+env/
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 .Python
-env/
 .env
+build/
+dist/
+*.egg-info/
+.ruff_cache/
+*.log
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
